@@ -1,3 +1,9 @@
+2013-12-28  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: bug fix: the »select playlist file to add« dialog can now
+        be resized, minimized and maximized. It also remembers its
+        position and size during runs. Fixes #951.
+
 2013-12-27  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: enhancement: The user can select the default subtitle
